# raigo

./: .gitignore  ADOPTERS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md  compile.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
cli/: .gitignore  README.md  package-lock.json  package.json
cli/src/: cli.ts  compiler.ts  loader.ts  templates.ts  validator.ts  wizard.ts
compiler/: README.md  compile_raigo.py
docs/: compliance-mappings.md  conflict-resolution.md  observe-mode.md  quickstart.md  testing-framework.md  webhook-schema.md
engine/: package-lock.json  package.json
engine/src/: evaluator.ts  server.ts
examples/: defence.raigo  healthcare.raigo  healthcare_hipaa.raigo  healthcare_v1_backup.raigo  iso27001.raigo  iso27001_healthcare.raigo  openclaw_af.raigo  openclaw_waf.raigo  startup.raigo
integrations/mcp/: README.md  package-lock.json  package.json
integrations/mcp/src/: index.ts
integrations/openclaw/: README.md  demo.js  raigo_skill.js
sdk/: package-lock.json  package.json
sdk-python/: pyproject.toml
sdk-python/raigo/: __init__.py
sdk/src/: index.ts
skills/: README.md
skills/raigo/: SKILL.md
skills/raigo/assets/: SETUP.md  starter-policy.raigo
skills/raigo/references/: API.md  TROUBLESHOOTING.md
skills/raigo/scripts/: evaluate.py  evaluate.sh
src/__tests__/: compiler.test.ts
src/adapters/: paperclip.ts
src/compiler/: index.ts
(+7 files in other folders)
